# bh_open_arm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: branch-protection.md  gate_report.py  invariants.md  ownership_diff.py  premerge_lint.py
.github/workflows/: ci.yml  env.yml
backend/actuation/: __init__.py  bus_writer.py  can_writer.py  clock.py  config.py  decider.py  emissions.py  enforcement.py  errdecode.py  gateway.py  guard.py  harness.py  latch.py  lease.py  mailbox.py  producer.py  safety.py  scheduler.py  staticcheck.py  trace.py  transition.py
backend/audit/: __init__.py  record.py  ring.py  transform.py
backend/calibration/: __init__.py  atomic_io.py  schema.json  schema.py  verify.py
backend/camera/: __init__.py  bandwidth.py  binding.py  constants.py  descriptor.py  diagnostics.py  droprate.py  enumerate_hw.py  fixtures.py  matrix.py  reverify.py  syncslop.py
backend/capture_interlock/: __init__.py  constants.py  converted.py  interlock.py  preservation.py  report.py  source.py
backend/cartesian_jog/: __init__.py  bench.py  constants.py  frames.py  jog.py  tcp.py
backend/collision_preflight/: __init__.py  bench.py  cli.py  constants.py  density.py  link7.py  model.py  preflight.py  reverify.py  selfcollision.py
backend/commloss/: __init__.py  constants.py  watchdog.py
backend/compscale/: __init__.py  compensation.py  constants.py  errors.py  independence.py  scales.py
backend/crash_recovery/: __init__.py  choice.py  constants.py  crash_worker.py  drill.py  faults.py  journal.py  layout.py  recovery.py  staticcheck.py
backend/deadman/: __init__.py  age_filter.py  constants.py  controller.py  intake.py  messages.py  monitor.py  rearm.py  receiver.py  reverify.py
backend/detection_gate/: __init__.py  activation.py  banner.py  constants.py  errors.py  staticcheck.py
backend/dynamics/: __init__.py  asset.py  constants.py  converter.py  errors.py  provenance.py
backend/event_ring/: __init__.py  constants.py  errors.py  monitor.py  reverify.py  ring.py  sample.py
backend/excitation/: __init__.py  abort.py  band.py  constants.py  errors.py  injection.py  reverify.py  torque_path.py  trajectory.py
backend/feedback/: __init__.py  feedback.py  locality.py  sinks.py
backend/freedrive/: __init__.py  constants.py  effort.py  gate.py  producer.py  reverify.py  session.py  staticcheck.py
backend/freedrive_walls/: __init__.py  cartesian_walls.py  constants.py  detection.py  errors.py  repulsion.py  torque_mode.py
backend/friction/: __init__.py  band.py  basis.py  cli.py  constants.py  errors.py  friction.provisional.yaml  identify.py  log.py  model.py  reverify.py  seed.py  separation.py  synthetic.py  writer.py
backend/friction_log/: __init__.py  band.py  constants.py  errors.py  frame.py  reverify.py  rx_tap.py  scheduler_tap.py  sink.py  staticcheck.py
backend/gmo/: __init__.py  constants.py  errors.py  friction_term.py  isolation.py  mass.py  model.py  observer.py  selector.py  single_process.py  synthetic.py
backend/gravity/: __init__.py  backend.py  compare.py  constants.py  errors.py  model.py  mujoco_v2.py  selector.py  urdf_kdl.py
backend/gravity_verify/: __init__.py  anomaly.py  config.py  constants.py  errors.py  harness.py  link7.py  measurement.py  residual.py  reverify.py
backend/gripper_endpoint/: __init__.py  capture.py  constants.py  errors.py  labels.py  norm_map.py  persistence.py  posforce.py  reverify.py  schema.py
backend/home/: __init__.py  cli.py  constants.py  decision.py  homereturn.py  preverify.py  profile.py
backend/interlock/: __init__.py  barrier.py  decision.py  staticcheck.py  walls.py
backend/jog/: __init__.py  addressing.py  config.py  interpolator.py  producer.py
backend/jogclamp/: __init__.py  counter.py  path.py  reason.py
backend/learning/: __init__.py  channel_groups.py  normalization_stats.py  policy_constraints.py  provenance.py  success_rate.py  synthetic_dataset.py
backend/mirror/: __init__.py  constants.py  convention.py  teaching.py  verify.py
backend/moveto/: __init__.py  constants.py  gate.py  limits.py  report.py  request.py
backend/pathb/: __init__.py  banner.py  bootstrap.py  constants.py  detection_lock.py  errors.py
backend/payload/: __init__.py  constants.py  detection.py  errors.py  gravity_reflection.py  payload.py  preflight.py  registry.py  reverify.py
backend/policy_matrix/: __init__.py  caps.py  enforce.py  matrix.py  provenance.py  registry.py
backend/preflight/: __init__.py  checks.py  gate.py  model.py  preflight.py  reverify.py
backend/reaction/: __init__.py  capability.py  constants.py  executor.py  frame.py  policy.py  reverify.py  staticcheck.py  strategy.py
backend/reaction_bench/: __init__.py  bench.py  cli.py  clock.py  constants.py  latency.py  precondition.py  reverify.py
backend/replay/: __init__.py  (+6 more)
contracts/: action_observation.yaml  policy_compat.yaml  unit_tags.yaml  upstream_facts.yaml
dashboard/: index.html  render.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ownership/: __init__.py  cli.py  contract.py  model.py  prover.py  registry.yaml
registry/: check.py  traceability.yaml
targets/: __init__.py  guards.py  host-rtx5080.freeze.txt  matrix.py  matrix.yaml
(+1922 files in other folders)
